--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body {
 .content__right {
     width: 50%;
     height: 100%;
-    background-image: url('https://i.ibb.co/c1rH8gW/image-header-desktop.jpg');
+    background: url('https://i.ibb.co/c1rH8gW/image-header-desktop.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
